Fix wrapping in header.

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -18,6 +18,7 @@
 
     nav {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         margin-top: 10px;
         font-weight: bold;
